# tp-3-tomaszstanislaw

./: CMakeLists.txt  Raport.docx  Readme4.md  example.cpp  python_test.py
projekt4/: READMEP4.md  dzwig.cpp
